# tb2d

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: default.yaml  web-reader.yaml
scripts/: install.sh  package-release.py
src/: app.rs  cli.rs  config.rs  error.rs  input.rs  layout.rs  lib.rs  main.rs  pty.rs  render.rs  session.rs  terminal.rs
