[package]
name = "tb2d"
version = "0.1.0"
edition = "2021"
description = "A spatial terminal workspace manager"
license = "MIT"

[dependencies]
anyhow = "1"
crossterm = "0.28"
dirs = "6"
portable-pty = "0.9"
ratatui = "0.28.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
instability = "=0.3.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vt100 = "0.15"
