[package]
name = "tb2d"
version = "0.1.0"
edition = "2021"
authors = ["hb2d <hb2d87@gmail.com>"]
description = "A spatial terminal workspace manager"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hb2d87/tb2d"
repository = "https://github.com/hb2d87/tb2d"
keywords = ["terminal", "workspace", "tui", "pty"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
crossterm = "0.28"
dirs = "6"
portable-pty = "0.9"
ratatui = "0.28.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
instability = "=0.3.1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vt100 = "0.15"
